# automate_bug_bash

./: .gitignore  config.yaml  pyproject.toml
.github/: copilot-instructions.md
output/AllenNeuralDynamics__aind-data-schema__0779783/: Dockerfile  metadata.json  setup_cmd.sh  solve.sh
output/Alqor-UG__sqooler__ebe718e/: Dockerfile  metadata.json  setup_cmd.sh  solve.sh
output/BCStudentSoftwareDevTeam__celts__427087a/: Dockerfile  metadata.json  run_test.sh  setup_cmd.sh  solve.sh
output/Blueprints-org__blueprints__730f931/: Dockerfile  metadata.json  setup_cmd.sh  solve.sh
output/CS-SI__eodag__d3511ec/: Dockerfile  metadata.json  run_test.sh  setup_cmd.sh  solve.sh
output/Clinical-Genomics__cg__6a3cfc3/: Dockerfile  metadata.json  setup_cmd.sh  solve.sh
output/Deltares__dfm_tools__cbd1b8a/: Dockerfile  metadata.json  setup_cmd.sh
output/Deltares__hydromt__a8a0ec0/: Dockerfile  metadata.json  run_test.sh
output/Garden-AI__garden__fedf8a8/: Dockerfile  metadata.json  setup_cmd.sh  solve.sh
output/GraphingLib__GraphingLib__133d375/: Dockerfile  metadata.json
output/MetOffice__CSET__8c6bff8/: Dockerfile  metadata.json  setup_cmd.sh  solve.sh
output/Molara-Lab__Molara__fca9559/: Dockerfile  metadata.json  setup_cmd.sh  solve.sh
output/Textualize__textual__55d1eac/: Dockerfile  metadata.json  solve.sh
output/TheoChem-VU__TCutility__1f9cfd4/: Dockerfile  metadata.json  setup_cmd.sh  solve.sh
pipeline/: __init__.py  docker_runner.py  github_client.py  models.py  task_writer.py
scripts/: docker_cleanup.py  test_single_repo.py
(+129 files in other folders)
